--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 .env
+.yml
 
 ### STS ###
 .apt_generated
@@ -21,7 +22,7 @@ bin/
 ### IntelliJ IDEA ###
 .idea
 *.iws
-*.iml
+*.iml0532835
 *.ipr
 out/
 !**/src/main/**/out/
