--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,13 @@
 spring:
+  profiles:
+    active: h2
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: postgresql
   application:
     name: sb01-deokhugam-team10
   servlet:
@@ -22,6 +31,62 @@ spring:
     url: jdbc:postgresql://localhost:5432/${DB_NAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+
+server:
+  port: 8080
+  tomcat:
+    uri-encoding: UTF-8
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        sql: debug
+
+springdoc:
+  swagger-ui:
+    operations-sorter: alpha
+    tags-sorter: alpha
+    path: /swagger-ui
+    display-request-duration: true
+    doc-expansion: none
+    filter: true
+    show-extensions: true
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: h2
+  application:
+    name: sb01-deokhugam-team10
+  servlet:
+    multipart:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create
+    database: h2
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
+        highlight_sql: true
+        generate_statistics: true
+  transaction:
+    default-timeout: 30
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/test
+    username: sa
+    password: ""
 
 server:
   port: 8080
